<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetTimePickerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    app:cardBackgroundColor="?attr/secondaryColor"
    android:elevation="20dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/secondaryColor">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/setLimitBtnBottomSheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <NumberPicker
                android:id="@+id/hours_selector_bottom_sheet"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="?attr/tintGlobalColor"
                android:theme="@style/NumberPickerTheme" />

            <TextView
                android:id="@+id/hours_textView_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="?attr/tintGlobalColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/minutes_selector_bottom_sheet"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="?attr/tintGlobalColor"
                android:theme="@style/NumberPickerTheme" />

            <TextView
                android:id="@+id/minutes_textView_bottom_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/mins"
                android:textColor="?attr/tintGlobalColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/setLimitBtnBottomSheet"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="35dp"
            android:autoSizeMaxTextSize="10dp"
            android:backgroundTint="?attr/tintGlobalColor"
            android:text="@string/set_limit"
            android:textColor="?attr/secondaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>